Main/assets/css/style.css
/* this sets the entire sheet to 0 margin and 0 padding */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* this sets the bodys font family, text color and background color*/
body {
    font-family: monospace;
    color: white;
    background-color: yellow;
   
}

/* this sets the headers background and text color */

header{  
    display: flex;
    background: white;
    color: black;
  /* height: 100px; */
  }

header h1{
    font-size: 30px;
    text-align: center;
    padding: 40px 10px 30px 20px;
}


nav {
    display:flex;
    background-color: blue;
    margin: 0 25%;
    justify-content: space-between;
    
}
  
  /* Style the links inside the navigation bar */
nav a{
    color: #f2f2f2;
    padding: 14px 20px;
    text-decoration: none;    
    font-size: 17px;
  }
  
  /* Change the color of links on hover */
  nav a:hover {
    background-color: #ddd;
    color: black;
  }
  
 @media screen and (max-width: 892px) {
    nav{
        flex-direction: column;
        align-items: center;
        
    }
    
 }

